offer test unit validation